--- a/app/app.html
+++ b/app/app.html
@@ -21,7 +21,7 @@
       <button menuClose ion-item>
         <ion-icon item-left name="calculator">
         </ion-icon>
-        Mortgage Calculator
+        Ryan Mortgage Calculator
       </button>
       <ion-list-header>Account</ion-list-header>
       <button menuClose ion-item >
